--- a/src/app/user/components/list-user/list-user.component.html
+++ b/src/app/user/components/list-user/list-user.component.html
@@ -1,7 +1,11 @@
-Customer <br>
+<!-- Customer <br>
  Blocked Account <br>
- Admin <br>
-categorie : <input type="text" [(ngModel)]="category" >
+ Admin <br> -->
+<!-- categorie : <input type="text" [(ngModel)]="category" > -->
+<br>
+  <br><br>
+  <br><br>
+  <br>
 <ul>
   <div *ngFor="let u of list; let j=index;
   let f=first; let l=last; let o=odd; let e=even " >
